--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=springboot
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hrdb_spring
+spring.datasource.username=root
+spring.datasource.password=Tjwls1215!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
